theme/style.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

p {
    font-size: 1.2em;
}

body {
    font-family: Outfit, sans-serif;
    line-height: 1.6;
    background-color: #f4f4f4;
    color: #333;
}


header {
    background-color: #0073e6;
    color: #fff;
    padding: 20px 0;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    position: sticky;
    top: 0;
    z-index: 1;
}

.header-title {
    position: absolute;
    padding-left: 10%;
}

.header-title>a {
    color: white;
    text-decoration: underline;
}

.header-container {
    width: 90%;
    max-width: 6000px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-container h1 {
    font-size: 24px;
    margin: 0;
}

nav ul {
    list-style: none;
    display: flex;
}

nav ul li {
    margin-left: 20px;
}

nav ul li a {
    display: flex;
    color: #fff;
    text-decoration: none;
    font-weight: bold;
    border: 2px solid white;
    padding: 10px;
    border-radius: 10px;
    transition: 0.2s;
}

nav ul li a:hover {
    transform: scale(1.2);
    background-color: #1e3cbe;
}

main {
    width: 90%;
    max-width: 1200px;
    margin: 40px auto;
    padding: 20px;
    background-color: #fff;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    min-height: 70vh;
}

.parallax {
    background-image: url(../img/bgIndex.jpg);
    height: 600px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    border-radius: 10px;
}

.main-title {
    position: absolute;
    margin-left: 25%;
    top: 400px;
    text-align: center;
    color: white;
    text-shadow: 5px 5px #333;
    font-size: 4em;
}

.secondary-title {
    font-size: 4em;
    position: absolute;
    margin-left: 150px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

.main-title-image {
    display: block;
    position: absolute;
    z-index: -1;
    left: 400px;
}

h2 {
    text-align: center;
    color: black;
    font-size: 2em;
}

h3 {
    text-align: left;
    color: black;
    font-size: 2em;
    text-align: center;
}

h4 {
    text-align: center;
    color: grey;
}

.body-text-description {
    position: relative;
    padding-bottom: 150px;
    border-radius: 50px;
    background-color: #e1efff;
    padding: 50px;
    margin-top: 100px;
}

.first-body-text>h3 {
    text-align: center;
}

.first-body-text>p {
    text-align: left;
}

.img-body-text-description-left {
    float: left;
    border-radius: 40px;
    padding: 30px;
}

.img-body-text-description-right {
    float: right;
    border-radius: 40px;
    padding: 30px;
}

.body-image-select {
    position: relative;
    width: fit-content;
    list-style-type: none;
    text-align: center;
}

.body-image-row {
    display: flex;
    display: inline-block;
    padding-left: 250px;
}

.body-image-row-sepia {
    filter: sepia(50);
}

.body-image-select>img {
    margin-left: 100px;
}

.body-img-select-button {
    position: relative;
    background-color: #007BFF;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    padding: 10px 20px;
    top: 10px;
    text-decoration: none;
}

.body-img-select-button:hover {
    background-color: #005bb5;
    text-decoration: underline;
}

.body-image-select-button:active {
    filter: brightness(0.5);
}

hr {
    border: 0;
    margin: 40px 0;
    width: 100%;
    padding: 20px;
    border-radius: 50px;
    background-color: #ccc;
}

hr.divider {
    border: 0;
    border-top: 2px solid #ccc;
    margin: 40px 0;
    width: 100%;
}


.form-email {
    margin-left: 40%;
}

#email-input {
    padding: 10px;
    border-radius: 10px;
    border: 1px solid black;
    background-color: #bbbbbb;
}

#submit-input {
    padding: 10px;
    margin-left: 10px;
    background: linear-gradient(0deg, white, #969696);
    border: 2px, solid, black;
    border-radius: 10px;
    cursor: pointer;
}

footer {
    background-color: #005ab9;
    color: white;
    padding-top: 20px;
    text-align: center;
    width: 100%;
    min-height: 50px;
    position: relative;
}

.footer-links {
    text-decoration: none;
    color: white;
}

.footer-links:hover {
    text-decoration: underline;
}

.contenedorFooter {
    padding-right: 25%;
    list-style-type: none;
}

.informacionDiv {
    display: flex;
}

.list-ul {
    list-style-type: none;
    padding-left: 25%;
    text-align: left;
}

.list-ul-center {
    list-style-type: none;
    padding-left: 25%;
    text-align: center;
}

.list-ul-img {
    padding-top: 2%;
    display: flex;
    padding-left: 40%;
}

.list-ul-links {
    display: flex;
    margin-left: 85vw;
}

.list-ul-links>a {
    color: white;
    text-decoration: none;
    display: flex;
    margin-left: 30px;
    line-height: normal;
}

.list-ul-links>a:hover {
    text-decoration: underline;
}

.list-ul-img>a {
    right: 20%;
    padding: 10px;
}

/* Comprar.html */
.comprar-title {
    text-align: center;
    font-size: 3em;
    color: #0073e6;
    margin-bottom: 20px;
}

.comprar-section {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 20px;
}

.card {
    background-color: #fff;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.card-image {
    position: relative;
    width: 100%;
    padding-top: 100%;
    overflow: hidden;
}

.card-image img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.card-content {
    padding: 15px;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.card-content-info {
    list-style-type: none;
    display: flex;
    gap: 60px;
    background-color: rgb(223, 243, 255);
    border-radius: 10px;
    padding: 5px;
}

.card-content h3 {
    font-size: 20px;
    color: #0073e6;
}

.card-content p {
    font-size: 14px;
    color: #666;
}

.card-price {
    font-size: 18px;
    color: #0073e6;
    font-weight: bold;
}

.card-button {
    padding: 10px 20px;
    font-size: 16px;
    background-color: #0073e6;
    color: #fff;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    align-self: flex-start;
}

.card-button:hover {
    background-color: #005bb5;
}

/* Pagination */
.pagination {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    margin-top: 20px;
}

.pagination-button,
.pagination-next {
    padding: 10px 15px;
    font-size: 14px;
    background-color: #0073e6;
    color: #fff;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

.pagination-button.active,
.pagination-button:hover,
.pagination-next:hover {
    background-color: #005bb5;
}

.pagination-next.inactive {
    background-color: #666;
}

/* Contact Section */
.contact-section {
    background-color: #ccc;
    border-radius: 10px;
    padding: 20px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.contact-section h2 {
    font-size: 24px;
    color: #0073e6;
    margin-bottom: 10px;
    text-shadow: #333 2px 2px;
}

.contact-section .contact-form-container h3 {
    font-size: 20px;
    color: #0073e6;
    margin-bottom: 10px;
}

.contact-section .contact-form-container form {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.contact-section .contact-form-container form input[type="text"],
.contact-section .contact-form-container form input[type="tel"],
.contact-section .contact-form-container form input[type="email"] {
    padding: 10px;
    font-size: 16px;
    border: 1px solid #ccc;
    border-radius: 4px;
    width: 100%;
}

.contact-section .contact-form-container form input[type="checkbox"] {
    margin-top: 10px;
}

.contact-section .contact-form-container form button {
    padding: 10px 20px;
    font-size: 16px;
    background-color: #0073e6;
    color: #fff;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    margin-top: 10px;
    align-self: flex-start;
}

.contact-section .contact-form-container form button:disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

.section-title {
    text-decoration: underline;
}

.contact-section .contact-form-container form button:hover {
    background-color: #005bb5;
}

.legal-section-list {
    padding-left: 50px;
}

input[type="checkbox"] {
    background-color: #fff;
    margin: 0;
    font: inherit;
    color: currentColor;
    width: 1.15em;
    height: 1.15em;
    border: 50px solid currentColor;
}

/* Localización */
.location-section {
    text-align: center;
}

/* Not Found */
.cat-image-container {
    width: 300px;
    margin-left: 40%;
    font-size: 1.3em;
    text-align: center;
}

.cat-image-border {
    border: 5px solid black;
    margin-top: 10%;
    border-radius: 1000px;
    width: 300px;
    transition: 0.8s;
}

.cat-image-border:hover {
    transform: rotate(360deg);
}

/* Detalle */
.property-features {
    display: flex;
    list-style-type: none;
}

.property-features-img {
    margin-left: 15%;
}

.details-img-columns {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

